--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
-    <div>Hassaan Ahmad</div>
+    <h1 style="color: red;">Hassaan Ahmad</h1>
+    <p style="color: blue
+">17/09/2004</p>
 </body>
 </html>
