--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'>
+    <meta charset='utf-
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
-<body>
+<body onclick="changeBacground(this)">
     <h1 style="color: red;">Hassaan Ahmad</h1>
     <p style="color: blue
 ">17/09/2004</p>
+<script>
+ function changeBacground(element) {
+    element.style.backgroundColor =`rgb(${Math.floor(Math.random()*255)},${Math.floor(Math.random()*255)},${Math.floor(Math.random()*255)})`
+        ;
+ }
+</script>
 </body>
 </html>
